--- a/tema_undangan/tema_1/index.html
+++ b/tema_undangan/tema_1/index.html
@@ -195,7 +195,7 @@
           <v-row align="center" justify="center">
             <v-card color="brown darken-1">
               <v-card-text class="text-center">
-                <h1 class="text-color3 font-weight-medium">00</h1>
+                <h1 class="text-color3 font-weight-medium">{{ displayDays }}</h1>
               </v-card-text>
               <v-card-actions>
                 <span class="ml-1 text-caption text-center text-color3">Days(s)</span>
@@ -204,28 +204,28 @@
 
             <v-card color="brown darken-1" class="ml-1">
               <v-card-text class="text-center">
-                <h1 class="text-color3 font-weight-medium">00</h1>
+                <h1 class="text-color3 font-weight-medium">{{ displayHours }}</h1>
               </v-card-text>
               <v-card-actions>
-                <span class="ml-1 text-caption text-center text-color3">Days(s)</span>
+                <span class="ml-1 text-caption text-center text-color3">Hours(s)</span>
               </v-card-actions>
             </v-card>
 
             <v-card color="brown darken-1" class="ml-1">
               <v-card-text class="text-center">
-                <h1 class="text-color3 font-weight-medium">00</h1>
+                <h1 class="text-color3 font-weight-medium">{{ displayMinutes }}</h1>
               </v-card-text>
               <v-card-actions>
-                <span class="ml-1 text-caption text-center text-color3">Days(s)</span>
+                <span class="ml-1 text-caption text-center text-color3">Minutes(s)</span>
               </v-card-actions>
             </v-card>
 
             <v-card color="brown darken-1" class="ml-1">
               <v-card-text class="text-center">
-                <h1 class="text-color3 font-weight-medium">00</h1>
+                <h1 class="text-color3 font-weight-medium">{{ displaySeconds }}</h1>
               </v-card-text>
               <v-card-actions>
-                <span class="ml-1 text-caption text-center text-color3">Days(s)</span>
+                <span class="ml-1 text-caption text-center text-color3">Seconds(s)</span>
               </v-card-actions>
             </v-card>
           </v-row>
@@ -718,35 +718,6 @@
                   <p class="font-weight-bold mt-5">{{ bls.nama }}</p>
                   <p class="text-caption text-italic">Reply to {{ uc.nama }}</p>
                   <p class="font-weight-light">{{ bls.ucapan }}</p>
-                                  <v-dialog v-model="dialog" width="500">
-                  <template v-slot:activator="{ on, attrs }">
-                    <v-btn text v-bind="attrs" v-on="on">
-                      <v-icon left>mdi-reply</v-icon>Reply
-                    </v-btn>
-                  </template>
-
-                  <v-card>
-                    <v-card-title class="text-h5 grey lighten-2">
-                      <p class="font-weight-normal">Tulis balasan untuk {{ uc.nama }}</p>
-                    </v-card-title>
-                    <v-card-text>
-                      <v-row justify="center" class="fill-height mt-10">
-                        <v-col>
-                          <v-textarea label="Tulis Ucapan" outlined dense rows="2"></v-textarea>
-                              <v-text-field label="Nama Lengkap" outlined prepend-inner-icon="mdi-account">
-                              </v-text-field>
-                        </v-col>
-                      </v-row>
-                    </v-card-text>
-                    <v-divider></v-divider>
-                    <v-card-actions>
-                      <v-spacer></v-spacer>
-                      <v-btn color="primary" text @click="dialog = false">
-                        Kirim
-                      </v-btn>
-                    </v-card-actions>
-                  </v-card>
-                </v-dialog>
                 </div>
               </div>
             </v-col>
