--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <a href="./tema_undangan/tema_1/index.html">Tema 1</a>
+    <a href="./tema_undangan/tema_2/index.html">Tema 2</a>
 </body>
 </html>
