--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <a href="./tema_undangan/tema_1/index.html">Tema 1</a>
     <a href="./tema_undangan/tema_2/index.html">Tema 2</a>
+    <a href="./tema_undangan/tema_3/index.html">Tema 2</a>
 </body>
 </html>
