--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <a href="./tema_undangan/tema_1/index.html">Tema 1</a>
     <a href="./tema_undangan/tema_2/index.html">Tema 2</a>
     <a href="./tema_undangan/tema_3/index.html">Tema 3</a>
+    <a href="./tema_undangan/tema_4/index.html">Tema 4</a>
 </body>
 </html>
