--- a/tema_undangan/tema_1/index.html
+++ b/tema_undangan/tema_1/index.html
@@ -14,12 +14,14 @@
   <div id="app">
     <v-app>
       <v-main>
-        <div v-if="loading">
-               <v-progress-circular
-      indeterminate
-      color="primary"
-    ></v-progress-circular>
-        </div>
+        <v-container fluid class="fill-height" v-if="loading">
+          <v-row align="center" justify="center">
+           <v-progress-circular
+           indeterminate
+           color="primary"
+         ></v-progress-circular>
+          </v-row>
+         </v-container>
         <div v-else>
                   <!-- Page 1 -->
         <div class="page1">
