--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <a href="./tema_undangan/tema_2/index.html">Tema 2</a>
     <a href="./tema_undangan/tema_3/index.html">Tema 3</a>
     <a href="./tema_undangan/tema_4/index.html">Tema 4</a>
+    <a href="./tema_undangan/tema_5/index.html">Tema 5</a>
 </body>
 </html>
