--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <a href="./tema_undangan/tema_4/index.html">Tema 4</a>
     <a href="./tema_undangan/tema_5/index.html">Tema 5</a>
     <a href="./tema_undangan/tema_6/index.html">Tema 6</a>
+    <a href="./tema_undangan/tema_7/index.html">Tema 7</a>
 </body>
 </html>
