--- a/tema_undangan/tema_1/index.html
+++ b/tema_undangan/tema_1/index.html
@@ -691,50 +691,15 @@
           </v-row>
             <v-row class="fill-height" justify="start">
             <v-col>
-              <div v-for="(uc, id) in ucapan" :key="id">
-                <p class="font-weight-bold mt-5">{{ uc.nama }}</p>
-                <p class="font-weight-light">{{ uc.ucapan }}</p>
-                <v-dialog v-model="dialog" width="500">
-                  <template v-slot:activator="{ on, attrs }">
-                    <v-btn text v-bind="attrs" v-on="on">
-                      <v-icon left>mdi-reply</v-icon>Reply
-                    </v-btn>
-                  </template>
-
-                  <v-card>
-                    <v-card-title class="text-h5 grey lighten-2">
-                      <p class="font-weight-normal title">Tulis balasan untuk {{ uc.nama }}</p>
-                    </v-card-title>
-                    <v-card-text>
-                      <v-row justify="start" class="fill-height mt-10">
-                        <v-col>
-                          <v-textarea label="Tulis Ucapan" v-model="formBalasan.ucapan" outlined dense rows="2"></v-textarea>
-                              <v-text-field label="Nama Lengkap" v-model="formBalasan.nama" outlined prepend-inner-icon="mdi-account">
-                              </v-text-field>
-                        </v-col>
-                      </v-row>
-                    </v-card-text>
-                    <v-divider></v-divider>
-                    <v-card-actions>
-                      <v-spacer></v-spacer>
-                      <v-btn color="primary" text @click="dialog = false, kirimBalasan(id)">
-                        Kirim
-                      </v-btn>
-                    </v-card-actions>
-                  </v-card>
-                </v-dialog>
-                <div v-for="(bls, id) in uc.reply" class="pl-10">
-                  <p class="font-weight-bold mt-5">{{ bls.nama }}</p>
-                  <p class="text-caption text-italic">Reply to {{ uc.nama }}</p>
-                  <p class="font-weight-light">{{ bls.ucapan }}</p>
-                </div>
+            <div class="overflowAuto">
+              <div v-for="(uc, id) in dataApi.comments" :key="id">
+                <p class="font-weight-bold mt-5">{{ uc.owner }}</p>
+                <p class="font-weight-light">{{ uc.content }}</p>
               </div>
+            </div>
             </v-col>
           </v-row>
           <v-divider class="hr4"></v-divider>
-          <div class="d-flex justify-center mb-16" :class="buttonLoad">
-            <v-btn>Load More</v-btn>
-            </div>
         </v-container>
         
         <!-- Page 14 -->
@@ -753,10 +718,11 @@
           </v-row>
         </v-container>
         </div>
+        <audio id="song" ref="audioElm">
+          <source :src="'https://merestui.com'+dataApi.music.music_path"
+            type="audio/mp3">
+        </audio>
         </div>
-        <audio id="audio"
-          src="https://cdn.undanganweb.com/link/2022/03/Nuca-Mahalini-Janji-Kita-Lirik-Lagu-Indonesia.mp3"
-          ref="audioElm"></audio>
       </v-main>
     </v-app>
   </div>
