--- a/tema_undangan/tema_6/index.html
+++ b/tema_undangan/tema_6/index.html
@@ -441,9 +441,9 @@
                     <v-card class="mt-10" style="border: 2px solid orange; background-color: transparent;">
                         <v-card-title>
                             <div class="overflowAuto">
-                            <div v-for="(i, idx) in ucapan" :key="idx">
-                            <p class="title mx-4">{{ i.nama }}</p>
-                            <p class="text-caption mx-4">{{ i.ucapan }}</p>
+                            <div v-for="(i, idx) in dataApi.comments" :key="idx">
+                            <p class="title mx-4">{{ i.owner }}</p>
+                            <p class="text-caption mx-4">{{ i.content }}</p>
                             <v-divider></v-divider>
                             </div>
                             </div>
@@ -480,10 +480,10 @@
                         </v-row>
                     </v-container>
                 </div>
-                            <audio id="song" ref="audioElm">
-            <source src="https://demo.datengdong.com/uploads/musics/11.mp3"
-              type="audio/mp3">
-          </audio>
+                <audio id="song" ref="audioElm">
+                    <source :src="'https://merestui.com'+dataApi.music.music_path"
+                      type="audio/mp3">
+                  </audio>
                 </div>
             </v-main>
         </v-app>
